change(web): increase min height of supplemental plot Prevent axis label overflow.

--- a/evanescence_web/res/styles.css
+++ b/evanescence_web/res/styles.css
@@ -669,7 +669,7 @@ main {
 
 #supplemental {
   padding: 10px;
-  flex: 1 0 350px;
+  flex: 1 0 400px;
   overflow: hidden;
 }
 
